syntax = "proto3";
package scene;

// this is the scene
message Scene {
    repeated Island islands = 1;
    float zoom = 2;
}

message Point {
    float x = 1;
    float y = 2;
}

message Island {
    repeated Point points = 1;
    repeated Point ctrl_points = 2;
}

// dont save pos for single entity export
message Entity {
    uint32 index = 1;
    Bitset bitset = 2;
    PosComponent pos_c = 3;
    DebugComponent debug_c = 4;
    InputComponent input_c = 5;
    MoveComponent move_c = 6;
    StaticColComponent static_col_c = 7;
    string name = 8;
}

message Bitset {
    uint64 bitset = 1;
}

message PosComponent {
    Point position = 1;
    float rotation = 2;
    uint32 parent = 3;
}

message DebugComponent {
    int32 shape = 1;
}

message InputComponent {
    int32 func = 1;
}

message MoveComponent {
    int32 movestate = 1;
    int32 moveset = 2;
}

message StaticColComponent {
    int32 shape = 1;
    int32 col_response = 2;
}